Исправлена кодировка Base64 на доступную для Java 11